dev endpoint for address search

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(izmSearchModule)
 export(izmSearchUI)
 export(izmr_dependencies)
 export(pseudoData)
+export(restAddressCallModule)
 export(restCallModule)
