--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(format_naam_tooltip)
 export(get_adres_depseudo)
 export(izmSearchModule)
 export(izmSearchUI)
+export(izm_search_api_is_live)
 export(izmr_dependencies)
 export(pseudoData)
 export(restAddressCallModule)
