--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: izmr
 Type: Package
 Title: De Integrale ZoekMachine als R package
-Version: 0.8
+Version: 0.8.2
 Author: Remko Duursma
-Depends: shiny,jsonlite,glue,dplyr,futile.logger,DBI,pool,safer
+Depends: shiny,jsonlite,glue,dplyr,dbplyr,futile.logger,DBI,pool,safer
 Maintainer: Remko Duursma <remko@shintolabs.nl>
 Description: Zoeken, data ophalen, depseudonimiseren. Wrappers voor REST calls, etc.
 License: CC0
