simplificatie; code cleaning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(Collection)
 export(clickable_link)
 export(format_adres_tooltip)
 export(format_naam_tooltip)
-export(get_adres_depseudo)
 export(izmSearchModule)
 export(izmSearchUI)
 export(izm_search_api_is_live)
@@ -12,3 +11,4 @@ export(izmr_dependencies)
 export(pseudoData)
 export(restAddressCallModule)
 export(restCallModule)
+importFrom(shintodb,databaseClass)
